--- a/Book.Api/Web.config
+++ b/Book.Api/Web.config
@@ -5,7 +5,7 @@
   -->
 <configuration>
   <appSettings>
-    <add key="mysqlConnection" value="Server=132.232.158.58;Database=book;Uid=root;Pwd=1234qwer!@;" />
+    <add key="mysqlConnection" value="Server=localhost;Database=book;Uid=root;Pwd=1111qqqq;" />
   </appSettings>
   <!--
     有关 web.config 更改的说明，请参见 http://go.microsoft.com/fwlink/?LinkId=235367。
