--- a/Book.Api/Web.config
+++ b/Book.Api/Web.config
@@ -7,6 +7,19 @@
   <appSettings>
     <add key="mysqlConnection" value="Server=localhost;Database=book;Uid=root;Pwd=1111qqqq;" />
   </appSettings>
+  <system.diagnostics>
+     <trace autoflush="false" indentsize="4">
+      <listeners>
+        <clear /><!--清除默认监听器-->
+        <!--添加自定义监听器 initializeData 就是初始化参数-->
+        <add name="LogTraceListener" type="Book.Api.LogTraceListener, Book.Api, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null" initializeData="d:\1.log" />
+      </listeners>
+    </trace>
+    <switches>
+      <!--这里可以设定监听级别,可以设置Error,Warning,Info或者留空-->
+      <add name="LogTraceListener" value="Error" />
+    </switches>
+  </system.diagnostics>
   <!--
     有关 web.config 更改的说明，请参见 http://go.microsoft.com/fwlink/?LinkId=235367。
 
