--- a/Book.Api/Book.Api.csproj
+++ b/Book.Api/Book.Api.csproj
@@ -132,6 +132,7 @@
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\FoodController.cs" />
     <Compile Include="Controllers\OrderController.cs" />
+    <Compile Include="Controllers\QiniuController.cs" />
     <Compile Include="Controllers\SetController.cs" />
     <Compile Include="Controllers\ShopController.cs" />
     <Compile Include="Controllers\UserController.cs" />
