--- a/Book.Api/Web.config
+++ b/Book.Api/Web.config
@@ -8,7 +8,7 @@
     <add key="mysqlConnection" value="Server=localhost;Database=book;Uid=root;Pwd=1111qqqq;" />
     <add key="AccessKey" value="knDR69SpTh25-hwQOl9hjFKO4NL8xSfUJJpngOVZ"/>
     <add key="SecretKey" value="xNj-B9yMqLbLQtR-7PFI6VEdxahqN7OY05O5MSw5"/>
-    <add key="Bucket" value="pz8m2vj7z.bkt.clouddn.com"/>
+    <add key="Bucket" value="mingbao"/>
   </appSettings>
   <system.diagnostics>
      <trace autoflush="false" indentsize="4">
