--- a/Book.Api/Web.config
+++ b/Book.Api/Web.config
@@ -5,10 +5,13 @@
   -->
 <configuration>
   <appSettings>
-    <add key="mysqlConnection" value="Server=localhost;Database=book;Uid=root;Pwd=1111qqqq;" />
+    <!--<add key="mysqlConnection" value="Server=localhost;Database=book;Uid=root;Pwd=1111qqqq;" />-->
+    <add key="mysqlConnection" value="Server=132.232.158.58;Database=book;Uid=mingbao;Pwd=1qaz2wsx!Q;" />
     <add key="AccessKey" value="knDR69SpTh25-hwQOl9hjFKO4NL8xSfUJJpngOVZ"/>
     <add key="SecretKey" value="xNj-B9yMqLbLQtR-7PFI6VEdxahqN7OY05O5MSw5"/>
     <add key="Bucket" value="mingbao"/>
+    <add key="wxID" value="wxa150f7c54d135f0b" />
+    <add key="wxKey" value="568b3255f364817b093ed993a9a093c5" />
   </appSettings>
   <system.diagnostics>
      <trace autoflush="false" indentsize="4">
