--- a/Book.Utils/Book.Utils.csproj
+++ b/Book.Utils/Book.Utils.csproj
@@ -48,6 +48,7 @@
   <ItemGroup>
     <Compile Include="Class1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SecurityUtil.cs" />
     <Compile Include="UserUtil.cs" />
   </ItemGroup>
   <ItemGroup>
