--- a/Book.Api/Web.config
+++ b/Book.Api/Web.config
@@ -7,9 +7,9 @@
   <appSettings>
     <!--<add key="mysqlConnection" value="Server=localhost;Database=book;Uid=root;Pwd=1111qqqq;" />-->
     <add key="mysqlConnection" value="Server=132.232.158.58;Database=book;Uid=mingbao;Pwd=1qaz2wsx!Q;" />
-    <add key="AccessKey" value="knDR69SpTh25-hwQOl9hjFKO4NL8xSfUJJpngOVZ"/>
-    <add key="SecretKey" value="xNj-B9yMqLbLQtR-7PFI6VEdxahqN7OY05O5MSw5"/>
-    <add key="Bucket" value="mingbao"/>
+    <add key="AccessKey" value="knDR69SpTh25-hwQOl9hjFKO4NL8xSfUJJpngOVZ" />
+    <add key="SecretKey" value="xNj-B9yMqLbLQtR-7PFI6VEdxahqN7OY05O5MSw5" />
+    <add key="Bucket" value="mingbao" />
     <add key="wxID" value="wxa150f7c54d135f0b" />
     <add key="wxKey" value="568b3255f364817b093ed993a9a093c5" />
   </appSettings>
@@ -79,6 +79,10 @@
       <dependentAssembly>
         <assemblyIdentity name="System.Net.Http.Formatting" publicKeyToken="31bf3856ad364e35" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-5.2.3.0" newVersion="5.2.3.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Net.Http" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.1.1.3" newVersion="4.1.1.3" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
