--- a/Book.Watch/Book.Watch.csproj
+++ b/Book.Watch/Book.Watch.csproj
@@ -9,9 +9,10 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Book.Watch</RootNamespace>
     <AssemblyName>Book.Watch</AssemblyName>
-    <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -49,6 +50,16 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Book.Dal\Book.Dal.csproj">
+      <Project>{446e473c-740e-4109-b83c-910bd4e6a705}</Project>
+      <Name>Book.Dal</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Book.Service\Book.Service.csproj">
+      <Project>{29eee1c9-5490-492e-855d-76d387d8b417}</Project>
+      <Name>Book.Service</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
