--- a/Book.Api/Web.config
+++ b/Book.Api/Web.config
@@ -18,7 +18,7 @@
       <listeners>
         <clear /><!--清除默认监听器-->
         <!--添加自定义监听器 initializeData 就是初始化参数-->
-        <add name="LogTraceListener" type="Book.Api.LogTraceListener, Book.Api, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null" initializeData="d:\1.log" />
+        <add name="LogTraceListener" type="Book.Api.LogTraceListener, Book.Api, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null" initializeData="d:\1.log" traceOutputOptions="DateTime" />
       </listeners>
     </trace>
     <switches>
