--- a/Book.Utils/Book.Utils.csproj
+++ b/Book.Utils/Book.Utils.csproj
@@ -37,7 +37,6 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
-    
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Web" />
     <Reference Include="System.Xml.Linq" />
@@ -52,6 +51,7 @@
     <Compile Include="HttpHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SecurityUtil.cs" />
+    <Compile Include="UdpSendHelper.cs" />
     <Compile Include="UserUtil.cs" />
   </ItemGroup>
   <ItemGroup>
