--- a/Book.Dal/Book.Dal.csproj
+++ b/Book.Dal/Book.Dal.csproj
@@ -90,6 +90,9 @@
     <Compile Include="Model\shop.cs">
       <DependentUpon>DbEntity.tt</DependentUpon>
     </Compile>
+    <Compile Include="Model\shop_day_order.cs">
+      <DependentUpon>DbEntity.tt</DependentUpon>
+    </Compile>
     <Compile Include="Model\shop_online.cs">
       <DependentUpon>DbEntity.tt</DependentUpon>
     </Compile>
@@ -106,6 +109,7 @@
     <Compile Include="OrderItemDal.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ShopDal.cs" />
+    <Compile Include="ShopDayOrderDal.cs" />
     <Compile Include="ShopOnLineDal.cs" />
     <Compile Include="SqlHelper.cs" />
     <Compile Include="UserInfoDal.cs" />
