--- a/Book.Service/Book.Service.csproj
+++ b/Book.Service/Book.Service.csproj
@@ -51,9 +51,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DictService.cs" />
     <Compile Include="QiniuService.cs" />
     <Compile Include="ShopDayOrderService.cs" />
     <Compile Include="ShopOnlineService.cs" />
+    <Compile Include="SpreadService.cs" />
     <Compile Include="TransactionHelper.cs" />
     <Compile Include="FoodService.cs" />
     <Compile Include="FoodTypeService.cs" />
