--- a/Book.Service/Book.Service.csproj
+++ b/Book.Service/Book.Service.csproj
@@ -64,6 +64,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SetService.cs" />
     <Compile Include="ShopService.cs" />
+    <Compile Include="UserFeeService.cs" />
     <Compile Include="UserService.cs" />
     <Compile Include="WeChatAppDecrypt.cs" />
     <Compile Include="WxService.cs" />
