--- a/Book.Api/Web.config
+++ b/Book.Api/Web.config
@@ -6,7 +6,7 @@
 <configuration>
   <appSettings>
     <add key="mysqlConnection" value="Server=localhost;Database=book;Uid=root;Pwd=1111qqqq;" />
-    <!--<add key="mysqlConnection" value="Server=132.232.158.58;Database=book;Uid=mingbao;Pwd=1qaz2wsx!Q;" />-->
+    <!--<add key="mysqlConnection" value="Server=132.232.158.58;Database=book;Uid=root;Pwd=1234qwer!@;" />-->
     <add key="AccessKey" value="knDR69SpTh25-hwQOl9hjFKO4NL8xSfUJJpngOVZ" />
     <add key="SecretKey" value="xNj-B9yMqLbLQtR-7PFI6VEdxahqN7OY05O5MSw5" />
     <add key="Bucket" value="mingbao" />
@@ -38,7 +38,7 @@
     <compilation debug="true" targetFramework="4.6.1" />
     <httpRuntime targetFramework="4.5.2" />
     <httpModules>
-      <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web" />
+      <!--<add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web" />-->
     </httpModules>
   </system.web>
   <system.webServer>
@@ -50,8 +50,8 @@
     </handlers>
     <validation validateIntegratedModeConfiguration="false" />
     <modules>
-      <remove name="ApplicationInsightsWebTracking" />
-      <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web" preCondition="managedHandler" />
+      <!--<remove name="ApplicationInsightsWebTracking" />
+      <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web" preCondition="managedHandler" />-->
     </modules>
   </system.webServer>
   <runtime>
