--- a/Book.Watch/Book.Watch.csproj
+++ b/Book.Watch/Book.Watch.csproj
@@ -5,7 +5,7 @@
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{B68BFBF9-4820-4247-966D-BDC9F76DB78F}</ProjectGuid>
-    <OutputType>WinExe</OutputType>
+    <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Book.Watch</RootNamespace>
     <AssemblyName>Book.Watch</AssemblyName>
