--- a/Book.Watch/App.config
+++ b/Book.Watch/App.config
@@ -4,7 +4,7 @@
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1"/>
     </startup>
   <appSettings>
-    <!--<add key="mysqlConnection" value="Server=localhost;Database=book;Uid=root;Pwd=1111qqqq;" />-->
-    <add key="mysqlConnection" value="Server=132.232.158.58;Database=book;Uid=root;Pwd=1234qwer!@;" />
+    <add key="mysqlConnection" value="Server=localhost;Database=book;Uid=root;Pwd=1111qqqq;" />
+    <!--<add key="mysqlConnection" value="Server=132.232.158.58;Database=book;Uid=root;Pwd=1234qwer!@;" />-->
   </appSettings>
 </configuration>
