--- a/Book.Watch/Book.Watch.csproj
+++ b/Book.Watch/Book.Watch.csproj
@@ -65,6 +65,7 @@
     <Compile Include="OnlineUser.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UdpSender.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config">
