--- a/Book.Manager/Book.Manager.csproj
+++ b/Book.Manager/Book.Manager.csproj
@@ -115,6 +115,7 @@
   <ItemGroup>
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\AdminController.cs" />
+    <Compile Include="Controllers\BillController.cs" />
     <Compile Include="Controllers\ReportController.cs" />
     <Compile Include="Controllers\ShopController.cs" />
     <Compile Include="Controllers\TodayController.cs" />
