--- a/Book.Job/App.config
+++ b/Book.Job/App.config
@@ -4,7 +4,8 @@
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
     </startup>
   <appSettings>
-    <add key="mysqlConnection" value="Server=localhost;Database=book;Uid=root;Pwd=1111qqqq;" />
+    <!--<add key="mysqlConnection" value="Server=localhost;Database=book;Uid=root;Pwd=1111qqqq;" />-->
+    <add key="mysqlConnection" value="Server=132.232.158.58;Database=book;Uid=root;Pwd=1234qwer!@;SslMode=none;" />
     <!--<add key="mysqlConnection" value="Server=132.232.158.58;Database=book;Uid=mingbao;Pwd=1qaz2wsx!Q;" />-->
     <add key="AccessKey" value="knDR69SpTh25-hwQOl9hjFKO4NL8xSfUJJpngOVZ" />
     <add key="SecretKey" value="xNj-B9yMqLbLQtR-7PFI6VEdxahqN7OY05O5MSw5" />
@@ -28,7 +29,7 @@
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
         <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-10.0.0.0" newVersion="10.0.0.0" />
+        <bindingRedirect oldVersion="0.0.0.0-12.0.0.0" newVersion="12.0.0.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
